--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,9 @@
         android:textAlignment="center"
         android:padding="10dp"
         android:textStyle="bold"
-        android:layout_alignTop="@+id/inputVerb"
-        android:layout_toLeftOf="@+id/submitButton"
-        android:layout_toStartOf="@+id/submitButton" />
+        android:layout_above="@+id/inputAdjective"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -65,8 +65,7 @@
         android:textAlignment="center"
         android:padding="10dp"
         android:textStyle="bold"
-        android:layout_alignBaseline="@+id/inputPlace"
-        android:layout_alignBottom="@+id/inputPlace"
+        android:layout_above="@+id/inputPlace"
         android:layout_toRightOf="@+id/inputPlace"
         android:layout_toEndOf="@+id/inputPlace" />
 
